improved contact area computation

--- a/mechanical/compressive_shear.ipynb
+++ b/mechanical/compressive_shear.ipynb
@@ -24,6 +24,53 @@
    "execution_count": 78
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "\"BA38\",\n",
+    "\"BA37\",\n",
+    "\"BA36\",\n",
+    "\"AD77\",\n",
+    "\"AD76\",\n",
+    "\"AD68\",\n",
+    "\"AD67\",\n",
+    "\"AD66\",\n",
+    "\"AD64\",\n",
+    "\"AD63\",\n",
+    "\"AD64_broken\",\n",
+    "\"AD52\",\n",
+    "\"AD51\",\n",
+    "\"AD50\",\n",
+    "\"AD48\",\n",
+    "\"AD45\",\n",
+    "\"AD43\",\n",
+    "\"AD42\",\n",
+    "\"AD40\",\n",
+    "\"AD38\",\n",
+    "\"AD36\",\n",
+    "\"AD33\",\n",
+    "\"AD32\",\n",
+    "\"AD31\",\n",
+    "\"AD29\",\n",
+    "\"AD28\",\n",
+    "\"AD21\",\n",
+    "\"AD20\",\n",
+    "\"AD19\",\n",
+    "\"AD18\",\n",
+    "\"AD17\",\n",
+    "\"AD16\",\n",
+    "\"AD14\",\n",
+    "\"AD12\",\n",
+    "\"AC15\",\n",
+    "\"AC11\",\n",
+    "\"AC14\",\n",
+    "\"AC04\",\n",
+    "\"AC03\",\n",
+    "\"AC08\","
+   ],
+   "id": "e7340e021e405204"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T19:46:05.864712Z",
