--- a/uCT_analysis/view.ipynb
+++ b/uCT_analysis/view.ipynb
@@ -3,26 +3,26 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-24T08:52:38.441864Z",
-     "start_time": "2024-10-24T08:52:30.398489Z"
+     "end_time": "2024-10-25T10:41:52.994210Z",
+     "start_time": "2024-10-25T10:41:50.959560Z"
     }
    },
    "cell_type": "code",
    "source": "from mt.scan import Scan",
    "id": "dcc92dd7cbbf9bc7",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-24T08:56:30.769932Z",
-     "start_time": "2024-10-24T08:54:59.076509Z"
+     "end_time": "2024-10-25T10:41:58.996492Z",
+     "start_time": "2024-10-25T10:41:54.785915Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "path = \"../../04_uCT/AD64_broken/\"\n",
+    "path = \"../../04_uCT/AD67/\"\n",
     "scan = Scan(path)\n",
     "scan.load(logging=True)"
    ],
@@ -32,21 +32,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading images from:  ../../04_uCT/AD64_broken/Slices/\n",
-      "Loaded stack with shape (1781, 795, 2419) and a size of 6.85 GB in 90.62 s.\n",
-      "No _mask file found at: ../../06_Results/AD64_broken/_mask.npy\n",
-      "No _particle_mask file found at: ../../06_Results/AD64_broken/_particle_mask.npy\n",
-      "No _tesselation file found at: ../../06_Results/AD64_broken/_tesselation.npy\n"
+      "Loading pickled Scan object from: ../../06_Results/uCT/AD67/Scan.pkl\n",
+      "Loading images from:  ../../04_uCT/AD67/Slices/\n",
+      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.29 s.\n",
+      "Loaded _mask from: ../../06_Results/uCT/AD67/_mask.npy\n",
+      "Loaded _particle_mask from: ../../06_Results/uCT/AD67/_particle_mask.npy\n",
+      "Loaded _tesselation from: ../../06_Results/uCT/AD67/_tesselation.npy\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-24T08:57:08.349400Z",
-     "start_time": "2024-10-24T08:56:56.803529Z"
+     "end_time": "2024-10-25T10:42:05.159833Z",
+     "start_time": "2024-10-25T10:41:59.907871Z"
     }
    },
    "cell_type": "code",
@@ -57,7 +58,7 @@
    ],
    "id": "f6a60c36b495c41b",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 3
   }
  ],
  "metadata": {
