--- a/nesh_workflow.ipynb
+++ b/nesh_workflow.ipynb
@@ -359,15 +359,16 @@
    ],
    "source": [
     "for folder in folders:\n",
-    "    scan = Scan(folder + \"/\", downscale=True)\n",
+    "    scan = Scan(folder + \"/\", downscale=False)\n",
     "    scan.load(logging=True)\n",
     "    \n",
     "    scan.segment()\n",
     "    scan.segment_particles()\n",
     "    scan.voronoi_tesselation()\n",
+    "\n",
+    "    scan.calculate_properties()\n",
     "    \n",
-    "    scan.save()\n",
-    "    print(\"Saved to \" + path)\n",
+    "    scan.save(logging=True)\n",
     "    print(\"-\"*20)"
    ]
   }
