--- a/nesh_workflow.ipynb
+++ b/nesh_workflow.ipynb
@@ -29,7 +29,8 @@
     "path = \"/gxfs_work/cau/sutef440/04_uCT/\"\n",
     "folders = os.listdir(path)\n",
     "folders = [path + folder for folder in folders]\n",
-    "print(folders)"
+    "print(folders)\n",
+    "print(len(folders))"
    ]
   },
   {
