--- a/uCT_analysis/test.ipynb
+++ b/uCT_analysis/test.ipynb
@@ -43,8 +43,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-26T11:05:59.934499Z",
-     "start_time": "2024-10-26T11:05:53.403182Z"
+     "end_time": "2024-10-26T11:25:21.627839Z",
+     "start_time": "2024-10-26T11:25:15.139842Z"
     }
    },
    "cell_type": "code",
@@ -87,6 +87,27 @@
     }
    ],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-26T11:25:21.915053Z",
+     "start_time": "2024-10-26T11:25:21.740719Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(len(ANALYSIS_SPECIMEN))",
+   "id": "76edfdbbd2716059",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -197,72 +218,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "def visualise_region_properties(image, mean_areas, contact_percent, fig_width=28, font_scale=1):\n",
-    "    sns.set_context(\"paper\")\n",
-    "    sns.set_theme(font=\"serif\", style=\"dark\", font_scale=font_scale)\n",
-    "    h, w = image.shape\n",
-    "    fig, axs = plt.subplots(1, 3, figsize=(fig_width, 5))\n",
-    "    fig.subplots_adjust(wspace=0)\n",
-    "    cmap = CMAP_MASK\n",
-    "\n",
-    "    def set_ticks_image(ax, h, w, image):\n",
-    "        major_ticks_x = [ii * w / 5 for ii in range(5)]\n",
-    "        minor_ticks_x = [ii * w / 5 + w / 10 for ii in range(5)]\n",
-    "        major_ticks_y = [ii * h / 5 for ii in range(5)]\n",
-    "        minor_ticks_y = [ii * h / 5 + h / 10 for ii in range(5)]\n",
-    "        minor_ticklabels = [str(ii) for ii in range(1, 6)]\n",
-    "        major_ticklabels = [\"\"] * 5\n",
-    "\n",
-    "        if image:\n",
-    "            ax.set_xticks(major_ticks_x)\n",
-    "            ax.set_xticks(minor_ticks_x, minor=True)\n",
-    "\n",
-    "            ax.set_yticks(major_ticks_y)\n",
-    "            ax.set_yticks(minor_ticks_y, minor=True)\n",
-    "        else:\n",
-    "            ax.set_xticks([0.5, 1.5, 2.5, 3.5, 4.5])\n",
-    "            ax.set_xticks([ii for ii in range(5)], minor=True)\n",
-    "            ax.set_yticks([0.5, 1.5, 2.5, 3.5, 4.5])\n",
-    "            ax.set_yticks([ii for ii in range(5)], minor=True)\n",
-    "\n",
-    "        ax.set_xticklabels(major_ticklabels)\n",
-    "        ax.set_xticklabels(minor_ticklabels, minor=True)\n",
-    "        ax.set_yticklabels(major_ticklabels)\n",
-    "        ax.set_yticklabels(minor_ticklabels, minor=True)\n",
-    "        ax.grid(True)\n",
-    "\n",
-    "    axs[0].imshow(image, cmap=cmap)\n",
-    "    set_ticks_image(axs[0], h, w, True)\n",
-    "    axs[0].set_title(\"X-Y Slice\")\n",
-    "    legend_elements = [\n",
-    "        # matplotlib.patches.Patch(facecolor=[0.878] * 3, label=\"X-Y Slice: \", edgecolor=[0.878] * 3),\n",
-    "                       matplotlib.patches.Patch(facecolor=cmap(0), label=\"Air\"),\n",
-    "                       matplotlib.patches.Patch(facecolor=cmap(1), label=\"Polymer\"),\n",
-    "                       matplotlib.patches.Patch(facecolor=cmap(2), label=\"Al\")]\n",
-    "    # box = axs[0].get_position()\n",
-    "    # axs[0].set_position([box.x0, box.y0-0.1, box.width, box.height])\n",
-    "\n",
-    "    axs[0].legend(handles=legend_elements,\n",
-    "                  loc='upper center',\n",
-    "                  bbox_to_anchor=(0.5, 1.2),\n",
-    "                  ncols=3,\n",
-    "                  facecolor=[0.878] * 3,\n",
-    "                  framealpha=1)\n",
-    "\n",
-    "    im = axs[1].imshow(mean_areas * 1e6, cmap=\"plasma\")\n",
-    "    axs[1].set_title(\"Mean area of cells in region in $\\mathrm{\\mu m^2}$\")\n",
-    "    set_ticks_image(axs[1], h, w, False)\n",
-    "    fig.colorbar(im, ax=axs[1])\n",
-    "    axs[1].set_aspect(h / w)\n",
-    "\n",
-    "    im = axs[2].imshow(contact_percent * 100, cmap=\"plasma\")\n",
-    "    axs[2].set_title(\"Al-PMMA contact percentage\")\n",
-    "    set_ticks_image(axs[2], h, w, False)\n",
-    "    fig.colorbar(im, ax=axs[2])\n",
-    "    axs[2].set_aspect(h / w)\n",
-    "    return fig"
-   ],
+   "source": "",
    "id": "c6a69d2b6e2fd653",
    "outputs": [],
    "execution_count": 59
@@ -326,14 +282,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "# areas, contact = np.sort(areas.flatten()), np.sort(contact.flatten())\n",
-    "fig, axs = plt.subplots(1, figsize=(10, 5), sharex=True, sharey=True)\n",
-    "axs.scatter(areas.ravel(), contact.ravel(), c=areas.ravel(), cmap=\"plasma\")\n",
-    "plt.suptitle(\"Mean area vs polymer contact percentage\")\n",
-    "plt.xlabel(\"Mean area of cells in region in um^2\")\n",
-    "plt.ylabel(\"Polymer contact percentage\")"
-   ],
+   "source": "# areas, contact = np.sort(areas.flatten()), np.sort(contact.flatten())\n",
    "id": "847363b6507328f2",
    "outputs": [
     {
