--- a/uCT_analysis/view.ipynb
+++ b/uCT_analysis/view.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:41:52.994210Z",
-     "start_time": "2024-10-25T10:41:50.959560Z"
+     "end_time": "2024-10-26T13:56:40.422860Z",
+     "start_time": "2024-10-26T13:56:36.929780Z"
     }
    },
    "cell_type": "code",
@@ -16,14 +16,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:41:58.996492Z",
-     "start_time": "2024-10-25T10:41:54.785915Z"
+     "end_time": "2024-10-26T13:57:01.566933Z",
+     "start_time": "2024-10-26T13:56:41.099558Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "path = \"../../04_uCT/AD67/\"\n",
-    "scan = Scan(path)\n",
+    "path = \"../../04_uCT/BA05/\"\n",
+    "scan = Scan(path, downscale=True)\n",
     "scan.load(logging=True)"
    ],
    "id": "db170f110a895502",
@@ -32,12 +32,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading pickled Scan object from: ../../06_Results/uCT/AD67/Scan.pkl\n",
-      "Loading images from:  ../../04_uCT/AD67/Slices/\n",
-      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.29 s.\n",
-      "Loaded _mask from: ../../06_Results/uCT/AD67/_mask.npy\n",
-      "Loaded _particle_mask from: ../../06_Results/uCT/AD67/_particle_mask.npy\n",
-      "Loaded _tesselation from: ../../06_Results/uCT/AD67/_tesselation.npy\n"
+      "Loading pickled Scan object from: ../../06_Results/uCT/BA05/Scan.pkl\n",
+      "Loading images from:  ../../04_uCT/BA05/Slices/\n",
+      "Loaded stack with shape (1783, 2423, 390) and a size of 3.37 GB in 19.25 s.\n",
+      "Loaded _mask from: ../../06_Results/uCT/BA05/_mask.npy\n",
+      "Loaded _particle_mask from: ../../06_Results/uCT/BA05/_particle_mask.npy\n",
+      "Loaded _tesselation from: ../../06_Results/uCT/BA05/_tesselation.npy\n"
      ]
     }
    ],
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:42:05.159833Z",
-     "start_time": "2024-10-25T10:41:59.907871Z"
+     "end_time": "2024-10-26T13:57:18.814539Z",
+     "start_time": "2024-10-26T13:57:02.819315Z"
     }
    },
    "cell_type": "code",
