--- a/uCT_analysis/scan_quality_comparison.ipynb
+++ b/uCT_analysis/scan_quality_comparison.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-30T21:24:53.126686Z",
-     "start_time": "2024-10-30T21:24:53.082228Z"
+     "end_time": "2024-11-02T15:00:54.662476Z",
+     "start_time": "2024-11-02T15:00:48.624578Z"
     }
    },
    "source": [
@@ -24,13 +24,13 @@
     "from mt.utils import print_image_info\n",
     "\n",
     "\n",
-    "with open(\"analytics_highQuality.pkl\", \"rb\") as file:\n",
-    "    analytics_hq = load(file)\n",
+    "# with open(\"analytics_highQuality.pkl\", \"rb\") as file:\n",
+    "#     analytics_hq = load(file)\n",
     "with open(\"analytics.pkl\", \"rb\") as file:\n",
     "    analytics = load(file)"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -41,24 +41,24 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T19:29:59.943269Z",
-     "start_time": "2024-10-30T19:29:59.936453Z"
+     "end_time": "2024-11-02T15:01:02.254816Z",
+     "start_time": "2024-11-02T15:01:02.244318Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# hq_scan_path = \"../../06_Results/ScansHigh/\"\n",
-    "# folder_list = [f for f in os.listdir(hq_scan_path) if os.path.isdir(os.path.join(hq_scan_path, f))]\n",
-    "# analytics_hq = {}\n",
-    "# for folder in folder_list:\n",
-    "#     specimen_name = folder\n",
-    "#     analytics_hq[folder] = load(open(hq_scan_path + folder + \"/Scan.pkl\", \"rb\"))[\"analytics\"]\n",
-    "# with open(\"analytics_highQuality.pkl\", \"wb\") as file:\n",
-    "#     dump(analytics_hq, file)"
+    "hq_scan_path = \"../../06_Results/ScansHigh/\"\n",
+    "folder_list = [f for f in os.listdir(hq_scan_path) if os.path.isdir(os.path.join(hq_scan_path, f))]\n",
+    "analytics_hq = {}\n",
+    "for folder in folder_list:\n",
+    "    specimen_name = folder\n",
+    "    analytics_hq[folder] = load(open(hq_scan_path + folder + \"/Scan.pkl\", \"rb\"))[\"analytics\"]\n",
+    "with open(\"analytics_highQuality.pkl\", \"wb\") as file:\n",
+    "    dump(analytics_hq, file)"
    ],
    "id": "22de99e0b946393d",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -73,16 +73,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T21:37:33.632272Z",
-     "start_time": "2024-10-30T21:37:21.143511Z"
+     "end_time": "2024-11-02T12:27:31.112750Z",
+     "start_time": "2024-11-02T12:27:15.790052Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "scan = Scan(\"../../04_uCT/AD28/\", downscale=False)\n",
+    "scan = Scan(\"../../04_uCT/AD12/\", downscale=False)\n",
     "scan.load(logging=True)\n",
     "stack_high = scan._stack\n",
-    "hq_mask = np.load(\"../../06_Results/ScansHigh/AD28/_mask.npy\")"
+    "hq_mask = np.load(\"_mask.npy\")"
    ],
    "id": "ed1202dc7d0eb1d",
    "outputs": [
@@ -90,16 +90,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading pickled Scan object from: ../../06_Results/uCT/AD28/Scan.pkl\n",
-      "Loading images from:  ../../04_uCT/AD28/Slices/\n",
-      "Loaded stack with shape (1780, 196, 2191) and a size of 1.53 GB in 11.81 s.\n",
-      "Loaded _mask from: ../../06_Results/uCT/AD28/_mask.npy\n",
-      "Loaded _particle_mask from: ../../06_Results/uCT/AD28/_particle_mask.npy\n",
-      "Loaded _tesselation from: ../../06_Results/uCT/AD28/_tesselation.npy\n"
+      "Loading pickled Scan object from: ../../06_Results/uCT/AD12/Scan.pkl\n",
+      "Loading images from:  ../../04_uCT/AD12/Slices/\n",
+      "Loaded stack with shape (1780, 114, 2224) and a size of 0.90 GB in 14.31 s.\n",
+      "Loaded _mask from: ../../06_Results/uCT/AD12/_mask.npy\n",
+      "Loaded _particle_mask from: ../../06_Results/uCT/AD12/_particle_mask.npy\n",
+      "Loaded _tesselation from: ../../06_Results/uCT/AD12/_tesselation.npy\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-02T12:27:56.998401Z",
+     "start_time": "2024-11-02T12:27:51.218190Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import skimage\n",
+    "skimage.exposure.histogram(hq_mask)"
+   ],
+   "id": "400562d60ec6f661",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 40565760,  26095073, 357489956,  27143291]), array([0, 1, 2, 3]))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -136,8 +163,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T21:37:51.735691Z",
-     "start_time": "2024-10-30T21:37:50.128369Z"
+     "end_time": "2024-11-02T12:27:51.165971Z",
+     "start_time": "2024-11-02T12:27:44.825213Z"
     }
    },
    "cell_type": "code",
@@ -147,24 +174,13 @@
     "viewer.add_labels(reslice(hq_mask, \"z\"), name=\"Normal\")\n",
     "viewer.show()\n",
     "\n",
-    "viewer2 = napari.Viewer()\n",
-    "viewer2.add_image(reslice(stack_low, \"z\"), name=\"High Quality\")\n",
-    "viewer2.add_labels(reslice(mask_low, \"z\"), name=\"Normal\")\n"
+    "# viewer2 = napari.Viewer()\n",
+    "# viewer2.add_image(reslice(stack_low, \"z\"), name=\"High Quality\")\n",
+    "# viewer2.add_labels(reslice(mask_low, \"z\"), name=\"Normal\")\n"
    ],
    "id": "1fc9e2cc7e4a945f",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Labels layer 'Normal' at 0x223f59271d0>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 11
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "metadata": {
