demo particle distribution

--- a/uCT_analysis/visualization.ipynb
+++ b/uCT_analysis/visualization.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-02T15:55:15.954786Z",
-     "start_time": "2024-11-02T15:55:11.766884Z"
+     "end_time": "2024-11-04T14:57:44.902695Z",
+     "start_time": "2024-11-04T14:57:44.774173Z"
     }
    },
    "source": [
@@ -27,12 +27,25 @@
     "from mt.visualization import visualize_region_properties, visualize_region_correlation\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "with open(\"analytics_highQuality.pkl\", \"rb\") as file:\n",
+    "# with open(\"analytics_highQuality.pkl\", \"rb\") as file:\n",
+    "#     analytics = pickle.load(file)\n",
+    "# specimen_overview = pd.read_csv(\"specimen.csv\", header=0, delimiter=\";\")\n",
+    "\n",
+    "with open(\"analytics.pkl\", \"rb\") as file:\n",
     "    analytics = pickle.load(file)\n",
     "specimen_overview = pd.read_csv(\"specimen.csv\", header=0, delimiter=\";\")"
    ],
-   "outputs": [],
-   "execution_count": 1
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -537,8 +550,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T07:36:07.495091Z",
-     "start_time": "2024-10-31T07:36:07.331912Z"
+     "end_time": "2024-11-04T14:57:50.115166Z",
+     "start_time": "2024-11-04T14:57:50.006636Z"
     }
    },
    "cell_type": "code",
@@ -565,13 +578,13 @@
    ],
    "id": "fa4242b6112afcc1",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T07:46:24.935800Z",
-     "start_time": "2024-10-31T07:46:17.781961Z"
+     "end_time": "2024-11-04T15:00:33.189675Z",
+     "start_time": "2024-11-04T15:00:29.778498Z"
     }
    },
    "cell_type": "code",
@@ -584,6 +597,7 @@
     "\n",
     "for ii, batch in enumerate(batch_names):\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(8, 8))\n",
+    "    print(cumulative_volume[batch][\"x\"][np.where(cumulative_volume[batch][\"y\"] >= 50)[0][0]])\n",
     "    df = pd.DataFrame(diameter_distribution[batch],\n",
     "                      columns=[\"Equivalent particle diameter in $\\mathrm{\\mu m}$\"])\n",
     "    sns.histplot(df,\n",
@@ -617,6 +631,16 @@
    ],
    "id": "4efa714750b6f595",
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99.23026159713977\n",
+      "64.9310148178386\n",
+      "49.775905121383644\n",
+      "68.08252509730114\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
