Updated mechanical tests

--- a/laser/function_generator_plots.ipynb
+++ b/laser/function_generator_plots.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-11T16:11:22.234853Z",
-     "start_time": "2024-11-11T16:11:22.228666Z"
+     "end_time": "2024-11-27T12:27:17.197353Z",
+     "start_time": "2024-11-27T12:27:17.190842Z"
     }
    },
    "source": [
@@ -22,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-11T16:11:22.246770Z",
-     "start_time": "2024-11-11T16:11:22.238861Z"
+     "end_time": "2024-11-27T12:27:17.216019Z",
+     "start_time": "2024-11-27T12:27:17.207359Z"
     }
    },
    "cell_type": "code",
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-11T16:11:22.528717Z",
-     "start_time": "2024-11-11T16:11:22.308966Z"
+     "end_time": "2024-11-27T12:27:17.450513Z",
+     "start_time": "2024-11-27T12:27:17.220027Z"
     }
    },
    "cell_type": "code",
@@ -89,8 +89,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-11T16:11:22.864707Z",
-     "start_time": "2024-11-11T16:11:22.633150Z"
+     "end_time": "2024-11-27T12:27:17.981492Z",
+     "start_time": "2024-11-27T12:27:17.721607Z"
     }
    },
    "cell_type": "code",
@@ -152,8 +152,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-11T16:11:22.874491Z",
-     "start_time": "2024-11-11T16:11:22.869715Z"
+     "end_time": "2024-11-27T12:27:17.999605Z",
+     "start_time": "2024-11-27T12:27:17.995506Z"
     }
    },
    "cell_type": "code",
@@ -185,8 +185,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-11T16:11:23.204277Z",
-     "start_time": "2024-11-11T16:11:22.890634Z"
+     "end_time": "2024-11-27T12:27:18.445133Z",
+     "start_time": "2024-11-27T12:27:18.013412Z"
     }
    },
    "cell_type": "code",
@@ -221,8 +221,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-11T16:18:48.794778Z",
-     "start_time": "2024-11-11T16:18:48.789692Z"
+     "end_time": "2024-11-27T12:27:18.501009Z",
+     "start_time": "2024-11-27T12:27:18.495417Z"
     }
    },
    "cell_type": "code",
@@ -265,12 +265,40 @@
        "(np.float64(-0.15584415584414535), np.float64(0.1620850622406639))"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 56
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-27T12:27:39.832725Z",
+     "start_time": "2024-11-27T12:27:39.828585Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from mt.laser import get_spot_size\n",
+    "\n",
+    "get_spot_size(45)"
+   ],
+   "id": "b200378428c1d3f5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(1.95), np.float64(2.41))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   }
  ],
  "metadata": {
